data/derived/comb/progs/unify/prog1080.ml.out
Characters 253-272:
  else expr ^ "Cosine(" ^ buildhelper 0 depth-1 expr ^ ")"
                          ^^^^^^^^^^^^^^^^^^^
Error: This expression has type string -> string
       but an expression was expected of type int
